# rust_scripts

./: .gitignore
arc/src/: main.rs
assert_stdout/: Cargo.toml
assert_stdout/src/: main.rs
c10_generic_traits_lifetimes/: Cargo.toml
c10_generic_traits_lifetimes/src/: lib.rs  main.rs
c11_tests/: Cargo.toml
c11_tests/src/: lib.rs
c12_minigrep/: Cargo.toml  output.txt
c12_minigrep/src/: lib.rs  main.rs
c13_closure_iter/: Cargo.toml
c13_closure_iter/src/: main.rs
c14_cargo/: Cargo.toml
c14_cargo/src/: lib.rs
c15_memory_leak/: Cargo.toml
c15_smart_pointer/: Cargo.toml
c15_smart_pointer/src/: lib.rs  main.rs  refcell.rs
c16_1_threads/: Cargo.toml
c16_1_threads/src/: main.rs
c16_2_message_transfer/: Cargo.toml
c16_2_message_transfer/src/: main.rs
c16_3_shared_memory/: Cargo.toml
c16_3_shared_memory/src/: main.rs
c17_3_design_pattern/: Cargo.toml
c17_3_design_pattern/src/: lib.rs  main.rs
c17_trait_object/: Cargo.toml
c17_trait_object/src/: lib.rs  main.rs
c18_1_use_pattern/: Cargo.toml
c18_1_use_pattern/src/: main.rs
c18_3_pattern_syntax/: Cargo.toml
c18_3_pattern_syntax/src/: main.rs
c19_1_unsafe/: Cargo.toml
c19_2_advanced_trait/: Cargo.toml
c19_4_fn_closure/: Cargo.toml
c19_5_macro/: Cargo.toml
c3_common/: Cargo.toml
c4_ownership/: Cargo.toml
c5_struct/: Cargo.toml
c6_enum/: Cargo.toml
c7_mod/: Cargo.toml
c8_collections/: Cargo.toml
c9_panic/: Cargo.toml
fastq_test/: Cargo.toml
fastq_test/src/: fastq_rs.rs  lib.rs  main.rs
hello1/: Cargo.toml
python/: webhook.py
why_rust/: Cargo.toml
(+30 files in other folders)
