[package]
name = "fastq_test"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
fastq = "0.6.0"
thiserror = "1"
anyhow = "1"
bio-types = ">=0.11.0"
serde = "1.0"
serde_derive = "1.0"

[dev-dependencies]
proptest = "1"
tempfile = "3.1.0"
rand = "0.8.3"
